--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,7 +19,7 @@
     </body>
 <footer>
     <p class="footer-copyright">
-        <span>&copy; {{ .Site.LastChange.Format "2006" }} / Powered by <a href="http://gohugo.io/">Hugo</a></span>
+        <span>&copy; Powered by <a href="http://gohugo.io/">Hugo</a></span>
     </p>
 </footer>
 </html>
